--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Nand rules
+# -------- #
+src/test/*
+
+# JAVA rules
+# -------- #
+
 # Compiled class file
 *.class
 
@@ -22,3 +29,22 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# C++ rules
+# -------- #
+
+/src/main/cpp/*
+!*.cpp
+!*.h
+
+# VScode rules
+# -------- #
+
+.vscode/*
+.DS_Store
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
